gl33-master/src/test/deca/context/invalid/other/appelFauxFonction16.deca
// Test de contexte invalide : appel faux de la fonction (pas de paramètre d'entrée)

class MyClass{

    String puissance(String a){
        return a;
    }
}

{
    MyClass m = new MyClass();
    int x = m.puissance();
}
